# OA

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
.github/workflows/: deploy.yml
src/openArb-ui-backend/: Cargo.toml  openArb-ui-backend.did
src/openArb-ui-backend/src/: lib.rs
src/openArb-ui-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/openArb-ui-frontend/src/: App.jsx  main.jsx
src/openarb_frontend_assets/: index.html
