[package]
name = "openArb-ui-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8"
rand_chacha = "0.3"